0.4.14
 - minor html filter update

0.4.13
 - major code reorganization (phase 1)
 - fixed help viewer functions
 - ability to disable use of non-ascii characters (configuration option)
 - changed SIGINT behaviour
 - html export filter creates now valid html documents
 - ability to print/export only selected items
 - new editor commands
 - text filter update
 - query/find code cleanup
 - fixed snprintf related bugs
 - minor bugfixes

0.4.12
 - added man page for abookrc (Alan Ford)
 - notes are returned as optional data in mutt queries
 - created a workaround for a mutt query bug
 - new "extra_alternative" config option (Alan)
 - added undo feature to editor
 - FAQ
 - macro updates
 - fixed the cancel key behavior in editor

0.4.11
 - new configuration file format
 - new sorting routines
 - minor mutt query patch (Matt)
 - html filter update
 - added mail2abook.py script to improve the mutt integration
 - memory allocation changes
 - contrib update

0.4.10
 - mutt alias import filter
 - --datafile option should work better now
 - merged HPUX patch (submitted by Matt Kraai)
 - added field for nickname/alias
 - bugfixes

0.4.9
 - increased the maximum length of an e-mail address
 - added Spruce and ldif export filters
 - text filter update
 - added support for systemwide configuration file (/etc/abook.conf)
 - list.c cleanup
 - minor fixes

0.4.8
 - new enter_string function (scrollable input)
 - fileselector
 - new fields for phone numbers
 - extra field support
 - added open database command and --datafile option

0.4.7
 - fixed terminal resizing bug
 - new man page
 - fixed "roll emails" bug
 - merged Alan's urlview patch
 - fixed some compile warnings on some systems

0.4.6
 - new proper ldif import filter
 - printing
 - GnomeCard export filter
 - improved ui
 - csv export filter
 - elm alias export filter
 - plain text export filter
 - improved import / export system
 - a man page (contributed by Alan Ford)
 - some fixes

0.4.5